# PhotosBrowser

./: .gitignore  .gitmodules  CMakeLists.txt  GifLoader.cpp  GifLoader.h  ImageLoader.cpp  ImageLoader.h  ImageProvider.cpp  ImageProvider.h  PIO.cpp  PIO.h  PhotosBrowser.pro  Pio.cpp  Pio.h  README-dev.md  README.md  Resizer.cpp  Resizer.h  Window.cpp  Window.h  gifLoader.cpp  gifLoader.h  imageProvider.cpp  imageProvider.h  main.cpp  main.h  pio.cpp  res.qrc  res.rc  wnd.cpp  wnd.h
res/: res.qrc  res.rc
